<resources>
    <string name="app_name">Huntsman War</string>
    <string name="app_currency">Coins</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_body">You are not connected to the Internet</string>
    <string name="no_internet_title">No Internet</string>
    <string name="airplane">Airplane mode</string>
    <string name="airplane_on">You have turned on the airplane mode.</string>
    <string name="mobile">Mobile data</string>
    <string name="wifi_on">Wifi</string>
    <string name="turn_off">Please turn off</string>
    <string name="turn_on">Please turn on</string>
    <string name="success">Successful</string>
    <string name="rejected">Rejected</string>
    <string name="failed">Failed</string>
    <string name="pending">Processing</string>
    <string name="shareContent">"💥Huntsman War💥  🎮INDIA'S VIP NO.1 TOURNAMENT APP🎮  Hey! Free Tournament khelo Or Jeeto Royal Pass/Elite Pass bahut Kuchh 100% Guarantee &amp;Download This 💥Huntsman War💥 App and Win Exciting Amounts
        and Prizes by joining and playing matches &amp;to Get 5 PlayCoins Free Signup Bonus Download From here 👉.\n\nDownload Link: https://huntsmanwar.ecoshirt.xyz\nPromo Code: "</string>
    <string name="shareSub">And use my Refer Code to get Rs.5 extra on Sign Up. Just Download Huntsman War Android App &amp; Register.</string>
    <string name="forceUpdateNote">Note: In order to continue using the app, you must have to update it to the latest version.</string>
    <string name="otp_text">We have sent 6 digit OTP on your given Mobile Number through SMS. Kindly check and enter it below to complete your Registration.</string>
    <string name="desc_refer">Invite your friends on App using your Promo Code to Earn 10 PlayCoins when they join first paid match. Your friends also get 5 PlayCoins as Signup Bonus!</string>
    <string name="note_refer">*Note: get bonus when they join paid match.</string>
    <string name="desc_reward">Watch videos to get reward after every day.</string>
    <string name="note_reward">*Note: max watch video 5 times per day.</string>
    <string name="sufficientBalanceText">You have enough PlayCoin to join this match.</string>
    <string name="you_don_t_have_sufficient_balance">You don\'t have sufficient PlayCoin</string>
    <string name="private_match_text">This match is private match. Users with access code can only participate. If you have got the access code, please enter it below.</string>
    <string name="choose_one">Choose one</string>
    <string name="facebook_app_id">744300826181271</string>
    <string name="fb_login_protocol_scheme">fb744300826181271</string>
    <string name="adAppId">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_Rewarded_Video_Ads">ca-app-pub-3940256099942544/5224354917</string>
    <string name="enter_the_otp_you_received">Enter the OTP you received</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="country_code">Country Code</string>
    <string name="coupon_code">SignUp Code</string>
    <string name="apply">APPLY</string>
    <string name="apply_promo_code">Apply Promo Code</string>
    <string name="verify">VERIFY</string>
    <string name="login">LOGIN</string>
    <string name="login_using_email_id">Login Using email id</string>
    <string name="login_using_mobile_number">Login using mobile number.</string>
    <string name="email">Email</string>
    <string name="show">Show</string>
    <string name="create_your_new_password">Create your new password.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="signup">SIGNUP</string>
    <string name="skip">SKIP</string>
    <string name="star">******</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_a_user">Already a user?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="by_joining_this_contest_you_accept_fantasyji_s_and_con_rm_that_you_are_a_resident_of_india_expect_for_the_states_of_assam_odisha_telangana_nagaland_or_sikkim_amp_your_age_is_18_and_above_in_case_y">By joining this contest, you accept Fantasyji\'s and conﬁrm that you are a resident of india expect for the states of Assam, Odisha, Telangana, Nagaland or Sikkim &amp; your age is 18 and above. In case y</string>
    <string name="by_registering_i_agree_to_fantasyji_s_terms_and_conditions_and_privacy_policy">By Registering, I agree to SkyWinner\'s</string>
    <string name="long_lorem_ipsum">
        Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque ipsum. Nulla orci dui, dignissim a risus ut, lobortis porttitor velit.
        \n\nNulla id lectus metus. Maecenas a lorem in odio auctor facilisis non vitae nunc. Sed malesuada volutpat massa. Praesent sit amet lacinia augue, mollis tempor dolor.
    </string>
    <string name="save_card_and_proceed">SAVE CARD AND PROCEED</string>
    <string name="save_new_password">SAVE NEW PASSWORD</string>
    <string name="save_password">SAVE PASSWORD</string>
    <string name="otp">ENTER OTP</string>
    <string name="we_have_sent_an_otp_on_your_number">We have sent an OTP on your number</string>
    <string name="we_will_send_you_a_verification_link_on_this_email">We will send you a verification link on this email</string>
    <string name="if_you_didn_t_receive_a_code">Request for a new one in</string>
    <string name="resend">Resend</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="send">SEND</string>
    <string name="price_pool">PRICE POOL</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="promo_code_optional">Promo Code (Optional)</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="win_prize">PRIZE POOL</string>
    <string name="per_kill">PER KILL</string>
    <string name="entry_fee">ENTRY FEE</string>
    <string name="type">TYPE</string>
    <string name="version">VERSION</string>
    <string name="map">MAP</string>
    <string name="watch_match">Watch Match</string>
    <string name="joined">Joined</string>
    <string name="join">JOIN</string>
    <string name="spectate">Spectate</string>
    <string name="play_now">Play Now</string>
    <string name="results_coming_soon">Results Coming Soon!</string>
    <string name="check_back_in_sometime">Check back in sometime...</string>
    <string name="no_upcoming_matches">No upcoming matches!</string>
    <string name="there_are_no_upcoming_matches_currently_ncheck_back_in_some_time">There are no upcoming matches currently. Check back in some time..</string>
    <string name="no_ongoing_matches">No ongoing matches!</string>
    <string name="there_are_no_ongoing_matches_currently_ncheck_back_in_some_time">There are no ongoing matches currently. Check back in some time...</string>
    <string name="matches_played">Matches Played</string>
    <string name="total_kills">Total Kills</string>
    <string name="playcoin_won">PlayCoin Won</string>
    <string name="account_holder_name">Account holder name</string>
    <string name="account_number">Account number</string>
    <string name="bank_name">Bank Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="code">Code</string>
    <string name="registered_name">Registered Name</string>
    <string name="playcoin">PlayCoin</string>
    <string name="play_coin_to_redeem">Play Coin to Redeem</string>
    <string name="redeem">Redeem</string>
    <string name="our_mission">Our Mission</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_id">Email Id</string>
    <string name="phone_no">Phone No</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="messenger">Messenger</string>
    <string name="live_chat_support">Live Chat Support</string>
    <string name="our_address">Our Address</string>
    <string name="follow_us">Follow Us</string>
    <string name="googlepay_number">GooglePay Number</string>
    <string name="googlepay_name">GooglePay Name</string>
    <string name="match_title">Match Title:</string>
    <string name="entry_fee_">Entry Fee :</string>
    <string name="available_playcoin_">Available PlayCoin :</string>
    <string name="won_playcoin_">Won PlayCoin :</string>
    <string name="join_now">JOIN NOW</string>
    <string name="add_money">ADD MONEY</string>
    <string name="full_name">Full Name</string>
    <string name="my_contest">My Contest</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="there_are_no_transactions_yet">There are no transactions yet...</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="my_profile">My Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_statistics">My Statistics</string>
    <string name="top_players">Top Players</string>
    <string name="important_updates">Important Updates</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="customer_support">Customer Support</string>
    <string name="faq">FAQ</string>
    <string name="share_app">Share App</string>
    <string name="logout">Logout</string>
    <string name="participated">Participated</string>
    <string name="account_verification">Account Verification</string>
    <string name="get_otp_on_call">Get OTP on Call</string>
    <string name="something_wrong">Something wrong...</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="instructions">Instructions</string>
    <string name="no_new_pubg_accounts_allowed">No New Game Accounts Allowed</string>
    <string name="default_match_notice">Default match notice</string>
    <string name="i_agree">I AGREE</string>
    <string name="access_code">Access Code</string>
    <string name="pubg_username">Game Username</string>
    <string name="enter_pubg_username">Enter Game Username</string>
    <string name="note_make_sure_you_enter_your_pubg_username_ign_and_not_character_id">Note: Make sure you enter your Game Username (IGN) and not Character ID.</string>
    <string name="pubg_room_details">Game Room Details</string>
    <string name="room_id">Room ID:</string>
    <string name="room_password">Room Password:</string>
    <string name="join_match_warning">Join Match Warning</string>
    <string name="how_to_join_room_click_here">How to Join Room? Click Here</string>
    <string name="play">Play</string>
    <string name="forget">Forget</string>
    <string name="please_don_t_cancel_wait_until_you_get_otp_from_us">Please don\'t cancel, Wait until you get otp from us.</string>
    <string name="new_update_is_available">New Update is Available</string>
    <string name="new_version_v1_5">New Version: v1.5</string>
    <string name="updated_on_16_10_2018">Updated On: 16/10/2018</string>
    <string name="what_s_new">What\'s New?</string>
    <string name="update">UPDATE</string>
</resources>