<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@+id/parent_layout" android:background="@drawable/gradient_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="30.0sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/reset_password" android:textAllCaps="true" android:fontFamily="@font/poppins_semibold" android:layout_marginStart="20.0dip" />
    <TextView android:textSize="16.0sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_your_new_password" android:fontFamily="@font/poppins" android:layout_marginStart="20.0dip" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/top_right_rounded" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="80.0dip">
        <LinearLayout android:orientation="vertical" android:id="@+id/lyt_mobile_login" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" app:cardCornerRadius="2.0dip" app:cardElevation="6.0dip">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip">
                    <TextView android:visibility="gone" android:textSize="12.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_password" android:fontFamily="@font/poppins" android:layout_marginStart="15.0dip" />
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <EditText android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@+id/et_password" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:hint="@string/new_password" android:inputType="textPassword" android:layout_marginStart="15.0dip" android:layout_toStartOf="@+id/txt_pshow"/>
                        <TextView android:textColor="@color/colorPrimary" android:id="@+id/txt_pshow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show" android:layout_centerVertical="true" android:fontFamily="@font/poppins" android:layout_marginEnd="10dp" android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="20.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" app:cardCornerRadius="2.0dip" app:cardElevation="6.0dip">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip">
                    <TextView android:visibility="gone" android:textSize="12.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/confirm_password" android:fontFamily="@font/poppins" android:layout_marginStart="15.0dip" />
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <EditText android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@+id/et_conf_pwd" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:hint="@string/confirm_password" android:layout_centerVertical="true" android:inputType="textPassword" android:layout_marginStart="15.0dip" android:layout_marginEnd="5.0dip" android:layout_toStartOf="@+id/txt_cshow"/>
                        <TextView android:textColor="@color/colorPrimary" android:id="@+id/txt_cshow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show" android:layout_centerVertical="true" android:fontFamily="@font/poppins" android:layout_marginEnd="10dp" android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <RelativeLayout android:id="@+id/lyt_save_pwd" android:background="@drawable/rounded_corners" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginTop="40.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_new_password" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:fontFamily="@font/poppins_medium" android:layout_marginStart="20.0dip" />
            <ImageView android:visibility="gone" android:layout_width="50.0dip" android:layout_height="50.0dip" app:srcCompat="@drawable/ic_enter_sign_in" android:adjustViewBounds="true" android:layout_centerVertical="true" android:layout_marginEnd="5.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <TextView android:textSize="16.0sp" android:textColor="@color/colorPrimary" android:gravity="center" android:layout_gravity="center" android:id="@+id/txt_mobile_login" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/login_using_mobile_number" android:layout_marginStart="20.0dip" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:padding="@dimen/spacing_large"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>