<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.IntroActivity">

    <RelativeLayout android:id="@+id/lyt_pager" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@+id/lyt_slider">
        <androidx.viewpager.widget.ViewPager android:id="@+id/pager" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="85.0dip" android:src="@drawable/rectangle" android:scaleType="fitXY" android:adjustViewBounds="true" android:layout_alignBottom="@+id/pager" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/lyt_slider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <RelativeLayout android:id="@+id/lyt_indicator" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" >
            <LinearLayout android:id="@+id/dots_indicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:orientation="horizontal" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
            <TextView android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@+id/txt_skip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/skip" android:layout_centerVertical="true" android:fontFamily="@font/poppins" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/lyt_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip">
            <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/don_t_have_an_account" android:fontFamily="@font/poppins" android:layout_marginStart="10.0dip" />
            <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/already_a_user" android:fontFamily="@font/poppins" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_below="@+id/lyt_1" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/orange_color" android:id="@+id/txt_signup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="REGISTER" android:fontFamily="@font/poppins_semibold" android:layout_marginStart="10.0dip" />
            <TextView android:textSize="16.0sp" android:textColor="@color/orange_color" android:id="@+id/txt_login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login" android:fontFamily="@font/poppins_semibold" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </RelativeLayout>
    
</RelativeLayout>