<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/bottom_sheet_number" android:background="@drawable/top_right_rounded" android:layout_width="match_parent" android:layout_height="wrap_content" app:behavior_hideable="true" app:behavior_peekHeight="0dp" app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/img_close" android:layout_width="20dp" android:layout_height="20dp" android:layout_marginTop="20dp" android:src="@drawable/close" android:adjustViewBounds="true" android:layout_centerVertical="true" android:layout_marginEnd="20dp" android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <TextView android:textSize="16sp" android:textColor="#082240" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enter_your_mobile_number" android:fontFamily="@font/poppins_medium" android:layout_marginStart="20dp"/>
    <LinearLayout android:orientation="horizontal" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="35dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp">
        <androidx.cardview.widget.CardView android:background="@drawable/edittext_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" app:cardElevation="3dp" app:cardCornerRadius="2dp">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="0dp" android:layout_marginStart="5dp" android:layout_marginEnd="5dp">
                <TextView android:visibility="gone" android:textSize="12sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/country_code" android:layout_marginStart="10dp"/>
                <com.hbb20.CountryCodePicker android:id="@+id/ccp" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="40dp" app:ccpDialog_textColor="#242627" app:ccp_contentColor="#242627" app:ccp_defaultPhoneCode="91" app:ccp_showNameCode="false" app:ccp_showPhoneCode="true" app:ccp_textSize="14sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5dp" android:layout_marginTop="5dp" android:layout_marginBottom="5dp" app:cardElevation="3dp" app:cardCornerRadius="2dp">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="10dp" android:layout_marginStart="10dp" android:layout_marginEnd="5dp">
                <TextView android:visibility="gone" android:textSize="12sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_number"/>
                <EditText android:textSize="14sp" android:textColor="#242627" android:id="@+id/et_phnone_botom" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="7dp" android:hint="@string/phone_number" android:digits="0123456789" android:inputType="number" android:imeOptions="actionDone" android:fontFamily="@font/poppins"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginStart="15dp" android:layout_marginEnd="15dp" app:cardCornerRadius="2dp" app:cardElevation="3dp">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp">
            <TextView android:visibility="gone" android:textSize="12sp" android:id="@+id/img_cc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/coupon_code" android:fontFamily="@font/poppins" android:layout_marginStart="15dp"/>
            <EditText android:textSize="14sp" android:textColor="@color/text_color" android:id="@+id/et_coupon_social" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/promo_code_optional" android:layout_below="@+id/img_cc" android:inputType="text" android:textAllCaps="false" android:layout_marginTop="5dp" android:layout_marginStart="15dp" android:layout_marginEnd="5dp" android:imeOptions="actionDone"/>
            <androidx.cardview.widget.CardView android:layout_gravity="end" android:id="@+id/cv_apply_coupon_social" android:visibility="visible" android:layout_width="60dp" android:layout_height="30dp" android:layout_marginTop="0dp" android:layout_marginEnd="10dp" android:layout_alignParentEnd="true" app:cardCornerRadius="15dp">
                <RelativeLayout android:background="@color/orange_color" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textColor="@android:color/white" android:gravity="center" android:id="@+id/txt_apply_social" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/apply" android:textAlignment="center"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <TextView android:textColor="@color/colorPrimary" android:id="@+id/img_remove_coupon_social" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="Remove" android:fontFamily="@font/poppins" android:layout_marginEnd="20dp" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="12sp" android:textColor="@color/text_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/promo_applied_text_social" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="XYZ promo applied" android:fontFamily="@font/poppins"/>
        <ImageView android:id="@+id/img_check_social" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:src="@drawable/ic_checks" android:layout_marginStart="10dp"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView android:layout_gravity="center" android:id="@+id/card_submit_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_marginBottom="10dp" app:cardBackgroundColor="@color/colorPrimary" app:cardCornerRadius="25dp">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:paddingTop="15dp" android:paddingBottom="15dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="60dp" android:paddingEnd="60dp">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_checkmark"/>
            <TextView android:textColor="@android:color/white" android:id="@+id/txt_submit_for_verification" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/verify" android:layout_marginStart="15dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
